Fixed white space bug

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,6 +1,10 @@
 body {
   font-family: 'Roboto', sans-serif;
-  overflow-x: hidden;
+  flex-grow: 1;
+}
+
+.navbar {
+  width: 100%;
 }
 
 .link {
